Fix back to top btn z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,7 @@ body::before {
   visibility: hidden;
   pointer-events: none;
   transition: opacity 0.3s, visibility 0.2s;
+  z-index: 999;
 }
 
 #btn-back-to-top.show {
